--- a/Ytdlp.Web/Pages/Shared/_Layout.cshtml
+++ b/Ytdlp.Web/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - yt_dlp_web</title>
+    <title>@(string.IsNullOrEmpty((string?)ViewData["Title"]) ? "YT-DLP Online" : ViewData["Title"])</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/font-awesome.css" asp-append-version="true"/>
