--- a/Ytdlp.Web/Pages/Content.cshtml
+++ b/Ytdlp.Web/Pages/Content.cshtml
@@ -1,10 +1,12 @@
 @page "/{contentId}"
+@using Ytdlp.Web.Data
 @model Ytdlp.Web.Pages.ContentModel
 
 @if (
     (Model.YtdlpContent is { IsAdultContent: true } || Model.Downloader is { IsAdultContent: true })
     && (!HttpContext.Request.Cookies.TryGetValue("IsUserAdult", out var isAdult) || isAdult != "true")
-) {
+)
+{
     <script>
         function toggleConsentButton() {
             const button = document.getElementById('iAmAnAdultButton');
@@ -14,9 +16,11 @@
                 button.setAttribute('disabled', '');   
         }
     </script>
-    
+
     <div>
-        <h1><i class="fa fa-hand-heart"></i></h1>
+        <h1>
+            <i class="fa fa-hand-heart"></i>
+        </h1>
         <h3>ADULT CONTENT</h3>
         <hr/>
         <label><input type="checkbox" onclick="toggleConsentButton()"/>I am over 18 years of age, and over the legal limit, in terms of age, in my country to view adult or pornographic content.</label>
@@ -26,11 +30,14 @@
 }
 
 
-
 @if (Model.Downloader is not null)
 {
     @if (Model.Downloader.DidDownloadMetadata)
     {
+        ViewData["Title"] = Model.Downloader.Title;
+        if (!string.IsNullOrEmpty(Model.Downloader.ChannelName))
+            ViewData["Title"] += $" {(Model.Downloader.Type == ContentType.Audio ? "by" : "—")} {Model.Downloader.ChannelName}";
+        
         <h3>@Model.Downloader.Title</h3>
         <span>@Model.Downloader.Type.ToString()</span>
         @if (Model.Downloader.IsAdultContent)
@@ -38,70 +45,90 @@
             <span><i class="fa fa-hand-heart"></i> Adult Content</span>
         }
         <span>@Model.Downloader.RequestedUri</span> @* Smaller, grey *@
-        <hr />
+        <hr/>
     }
-    
-    <span id="downloadStatus"></span>
+
+    <span id="downloadStatus">Loading...</span>
     <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
         <div id="downloadProgress" class="progress-bar progress-bar-striped progress-bar-animated" style="width: 0"></div>
     </div>
     <span id="downloadETA"></span>
 
-    <script src="https://cdn.jsdelivr.net/npm/@@microsoft/signalr/dist/browser/signalr.min.js"></script>
     <script>
-        const statusElement = document.getElementById('downloadStatus');
-        const progressElement = document.getElementById('downloadProgress');
-        const etaElement = document.getElementById('downloadETA');
-        
-        const connection = new signalR.HubConnectionBuilder()
-            .withUrl('/hubs/downloadProgress')
-            .build();
-        
-        let lastRevision = -1;
-        
-        connection.on('reloadPage', document.location.reload);
-        connection.on('downloadError', () => {
-            alert('Failed to download content');
-            // ToDo: Proper notification
-        });
-        connection.on('updateProgress', (revision, state, progress, eta, data) => {
-            if (lastRevision >= revision) return;
-            lastRevision = revision;
-            if (data === '') data = state;
-            statusElement.innerText = data;
-            progressElement.style.width = `${Math.max(0, Math.min(0, progress)) * 100}%`;
-            etaElement.innerText = eta;
-        });
-        
-        connection.start()
-            .catch(err => {
-                console.error('Error while connecting to download-update hub', err);
-                // ToDo: Show notification
+        document.addEventListener("DOMContentLoaded", function(event) {
+            const statusElement = document.getElementById('downloadStatus');
+            const progressElement = document.getElementById('downloadProgress');
+            const etaElement = document.getElementById('downloadETA');
+            
+            const connection = new signalR.HubConnectionBuilder()
+                .withUrl('/hubs/downloadProgress')
+                .build();
+            
+            let lastRevision = -1;
+            
+            connection.on('reloadPage', () => {
+                console.log('Reload requested');
+                window.location.reload();
             });
+            connection.on('downloadError', () => {
+                alert('Failed to download content');
+                // ToDo: Proper notification
+                window.location.href = '/';
+            });
+            connection.on('updateProgress', (revision, state, progress, eta, data) => {
+                console.log('Incoming update: ' + revision);
+                if (lastRevision >= revision) return;
+                lastRevision = revision;
+                if (data === '') data = state;
+                statusElement.innerText = data;
+                progressElement.style.width = `${Math.floor(parseFloat(progress) * 100).toString()}%`;
+                etaElement.innerText = eta;
+            });
+            
+            connection.start()
+                .then(() => connection.invoke("SubscribeTo", "@Model.ContentId"))
+                .catch(err => {
+                    console.error('Error while connecting to download-update hub', err);
+                    // ToDo: Show notification
+                });
+        });
     </script>
+    <script src="/lib/signalr.min.js"></script>
 }
-
 
 
 else if (Model.YtdlpContent is not null)
 {
+    ViewData["Title"] = Model.YtdlpContent.Title;
+    if (!string.IsNullOrEmpty(Model.YtdlpContent.ChannelName))
+        ViewData["Title"] += $" {(Model.YtdlpContent.Type == ContentType.Audio ? "by" : "—")} {Model.YtdlpContent.ChannelName}";
+    
     <h3>@Model.YtdlpContent.Title</h3>
     <span>@Model.YtdlpContent.Type.ToString()</span>
     @if (Model.YtdlpContent.IsAdultContent)
     {
         <span><i class="fa fa-hand-heart"></i> Adult Content</span>
     }
+
     <span>@Model.YtdlpContent.RequestedUri</span> @* Smaller, grey *@
     @if (Model.YtdlpContent.ThumbnailAssetGuid is not null)
     {
         <img width="480px" height="270px" src="/@Model.ContentId/thumbnail" alt="Content Thumbnail"/>
     }
-    <button onclick="window.open('/@Model.ContentId/media', '_blank')"><i class="fa fa-play"></i></button>
-    <button onclick="window.location.href = '/@Model.ContentId/download'"><i class="fa fa-download"></i></button>
-    <button onclick="copyToClipboard(`${getBaseURL()}/@Model.ContentId/media`)"><i class="fa fa-copy"></i></button>
-    <button onclick="copyToClipboard(`${getBaseURL()}/@Model.ContentId`)"><i class="fa fa-share"></i></button>
-}
 
+    <button onclick="window.open('/@Model.ContentId/media', '_blank')">
+        <i class="fa fa-play"></i>
+    </button>
+    <button onclick="window.location.href = '/@Model.ContentId/download'">
+        <i class="fa fa-download"></i>
+    </button>
+    <button onclick="copyToClipboard(`${getBaseURL()}/@Model.ContentId/media`)">
+        <i class="fa fa-copy"></i>
+    </button>
+    <button onclick="copyToClipboard(`${getBaseURL()}/@Model.ContentId`)">
+        <i class="fa fa-share"></i>
+    </button>
+}
 
 
 else
